cabal-version:      3.4
name:               ding-dong
version:            0.1.0.0

synopsis: Nostr web client
license:            MIT
license-file:       LICENSE

author:             branko@branko
maintainer:         branko@branko

build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
                      Nostr.Request
                      Nostr.Response
                      Nostr.Relay
                      Nostr.Filter
                      Nostr.Kind
                      Nostr.Event
                      Nostr.Keys
                      Nostr.Profile
                      Nostr.WebSocket
                      Nostr.Network
                      Nostr.RelayPool
                      Nostr.Log
                      Nostr.Reaction
                      Nostr.ReactionUtils
                      PeriodicLoader
                      ReactionsLoader
                      ProfilesLoader
                      MyCrypto
                      MyMain
                      Contacts
                      MisoSubscribe
                      ModelAction
                      BechUtils
                      ContentUtils
                      Tabs

    build-depends:    base ^>=4.20.0.0
                      , secp256k1-haskell
                      , miso
                      , aeson
                      , jsaddle
                      , jsaddle-dom
                      , bytestring
                      , vector
                      , cryptohash-sha256
                      , base16
                      , data-default
                      , text
                      , modern-uri
                      , time
                      , containers
                      , string-conversions
                      , datetime
                      , optics
                      , stm
                      , mtl
                      , intervals
                      , entropy
                      , bech32
                      , extra
    hs-source-dirs:   src
    default-language: Haskell2010

executable nostr-wasm
  hs-source-dirs: app 
  -- default-language: GHC2021
  main-is:
     App.hs
  -- other-modules:
  --    MyMain
  if arch(wasm32)
    ghc-options: -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
  else 
    ghc-options: -main-is App.main 
  build-depends: 
    wasm-test-project
    , aeson
    , miso
    , containers
    , transformers
    , jsaddle
    , jsaddle-wasm
    , ghc-experimental
    , base
    , mtl
    , lens
    , optics
    -- , jsaddle-warp