cabal-version:      3.4
name:               ding-dong
version:            0.1.0.0

synopsis:           Nostr web client
license:            MIT
license-file:       LICENSE

author:             Branislav branko1755@proton.me

build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
                      Nostr.Request
                      Nostr.Response
                      Nostr.Relay
                      Nostr.Filter
                      Nostr.Kind
                      Nostr.Event
                      Nostr.HashableEvent
                      Nostr.Keys
                      Nostr.Profile
                      Nostr.WebSocket
                      Nostr.Network
                      Nostr.RelayPool
                      Nostr.Log
                      Nostr.Reaction
                      PeriodicLoader
                      ReactionsLoader
                      ProfilesLoader
                      ProfilesLoader.Types
                      MyCrypto
                      DingDong
                      Contacts
                      MisoSubscribe
                      ModelAction
                      BechUtils
                      ContentUtils
                      Tabs
                      Utils
                      StoredRelay

    build-depends:    base ^>=4.20.0.0
                      , secp256k1-haskell
                      , miso
                      , aeson
                      , jsaddle
                      , jsaddle-dom
                      , bytestring
                      , vector
                      , cryptohash-sha256
                      , base16
                      , data-default
                      , text
                      , time
                      , containers
                      , string-conversions
                      , datetime
                      , optics
                      , stm
                      , mtl
                      , intervals
                      , entropy
                      , bech32
                      , extra
                      , scientific
    hs-source-dirs:   src
    default-language: Haskell2010

executable nostr-wasm
  hs-source-dirs: app 
  main-is:
     App.hs
  if arch(wasm32)
    ghc-options: -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
  else 
    ghc-options: -main-is App.main 
  build-depends: 
      ding-dong
    , aeson
    , miso
    , containers
    , transformers
    , jsaddle
    , jsaddle-wasm
    , ghc-experimental
    , base
    , mtl
    , optics

executable websockets-server
  Hs-source-dirs:   src/Relay
  Main-is:          Main.hs
  other-modules:    Relay.Relay
                    Relay.Request
                    Relay.Database
  -- ghc-options: -main-is WSServer.main 
  Default-language: Haskell2010

  Build-depends:
    base,
    websockets,
    text,
    ding-dong,
    aeson,
    vector,
    mtl,
    containers,
    optics,
    base16,
    bytestring,
    time,
    datetime